--- a/app/assets/stylesheets/_right-content.scss
+++ b/app/assets/stylesheets/_right-content.scss
@@ -6,21 +6,22 @@
     border-bottom: 1px solid #eeeeee;
     padding: 24px 40px 0 40px;
 
-    .header-box__right{
+    &__right{
       height: 40px;
       padding: 0 20px;
       margin-top: 28px;
       line-height: 40px;
       border: solid 1px #38aef0;
       float:right;
+      color: #38AEF0;
     }
-    .header-box__left__group-name{
+    &__left__group-name{
       font-size: 20px;
       color: #333333;
       display: inline-block;
       margin-top: 35px;
     }
-    .header-box__left__members{
+    &__left__members{
       font-size: 12px;
       color: #999999;
       margin-top: 15px;
