--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,6 @@
 @import "./left-content";
 @import "./right-content";
 @import "font-awesome";
+@import "modules/user";
+@import "config/colors";
+@import "modules/flash";
