--- a/app/assets/stylesheets/_left-content.scss
+++ b/app/assets/stylesheets/_left-content.scss
@@ -26,14 +26,19 @@
     .group-box{
       background-color: #2f3e51;
       height: calc(100% - 96px);
-      color: #FFFFFF;
+
+
       &__group-name{
         padding:20px 20px 0px 20px;
         font-size: 15px;
+        color: #FFFFFF;
+        text-decoration: none;
         }
       &__group-message{
         padding: 5px 20px 20px 20px;
         font-size: 11px;
+        color: #FFFFFF;
+        text-decoration: none;
         }
     }
 }
