add_group-function2
Editボタンのリンク設定

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,7 +5,8 @@
 
 .right-content
   .header-box
-    .header-box__right Edit
+    .header-box__right
+      = link_to "Edit", edit_group_path(2)
     .header-box__left__group-name sampleグループ
     .header-box__left__members member:okuna,yamada
 
