--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,26 +1,22 @@
-
-.confirmation チャットグループが作成されました
-
 = render 'shared/left-content'
 
 .right-content
   .header-box
     .header-box__right
-      = link_to "Edit", edit_group_path(2)
-    .header-box__left__group-name sampleグループ
-    .header-box__left__members member:okuna,yamada
-
+      = link_to "Edit", edit_group_path(@group.id)
+    .header-box__left__group-name
+      = @group.name
+    .header-box__left__members
+      Member:
+      - @group.users.each do |user|
+        = user.name
   .message-box
-    .message-box__name okuna
-    .message-box__time 2019/02/07(Thu) 17:39:09
-    .message-box__comment Hello.
-
-  .footer
-    %form
-      %input-box
-        %input{type:'text',placeholder:'type a message'}
-        %label
-          = fa_icon("photo")
-          %input{type:'file'}
-      %input{type:'submit',class:'send-button',value:'Send'}
-
+    = render @messages
+  .form
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = fa_icon 'picture-o', class: 'icon'
+          = f.file_field :image, class: 'hidden'
+      = f.submit 'Send', class: 'form__submit'
