--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,10 @@
-.message-box__name
-  = message.user.name
-.message-box__time
-  = message.created_at.strftime("%Y/%m/%d %H:%M")
-.message-box__comment
-  - if message.content.present?
-    %p.lower-message__content
-      = message.content
-  = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+.message-box
+  .message-box__name
+    = message.user.name
+  .message-box__time
+    = message.created_at.strftime("%Y/%m/%d %H:%M")
+  .message-box__comment
+    - if message.content.present?
+      %p.lower-message__content
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
